--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.tokentextarea.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.tokentextarea.less
@@ -47,8 +47,8 @@
 	.ui-btn-inner.ui-btn-icon-only .ui-icon.ui-icon-plus {
 		width : 45 * @unit_base;
 		height : 45 * @unit_base;
-		margin-left : -18 * @unit_base;
-		margin-top : -24 * @unit_base;
+		margin-left : -15.75 * @unit_base;
+		margin-top : -22.5 * @unit_base;
 		background-color : @color_button_icon;
 	}
 }
